--- a/src/vues/principalView.fxml
+++ b/src/vues/principalView.fxml
@@ -36,9 +36,9 @@
             <MenuItem mnemonicParsing="false" onAction="#mAide" text="Aide" />
          </items></Menu>
     </MenuBar>
-   <Label prefHeight="20.0" prefWidth="600.0" text="~Build by AMAV~" />
+   <Label prefHeight="20.0" prefWidth="600.0" text="  Build by AMAV" />
 
-    <TextField fx:id="opperation" alignment="CENTER_RIGHT" editable="false" prefHeight="67.0" prefWidth="560.0" style="-fx-background-color: #2a7c82;">
+    <TextField fx:id="opperation"  alignment="CENTER_RIGHT" editable="false" prefHeight="67.0" prefWidth="560.0" style="-fx-background-color: #2a7c82;">
         <VBox.margin>
             <Insets left="20.0" right="20.0" top="10.0" />
         </VBox.margin>
